added bib for Nature HB, nixed old bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -193,7 +193,7 @@ incollection{kogge2019b,
   journal={Scientific Reports},
   year={2024},
   keywords={preprint},
-  selected={true}, 
+  selected={false}, 
   bibtex_show = {true},
   abbr = {Sci Rep},
   n_first_authors={2},
@@ -205,14 +205,18 @@ incollection{kogge2019b,
   award = {Plenary talk at IC2S2 2023 [AR: 1.75%]<br>Contributed talks at NetSci 2023, ICSSI 2023},
 }
 
-@article{venturini2023covid,
-  title={The {COVID}-19 {Research} {Outbreak}: {How} the {Pandemic} {Culminated} in a {Surge} of {New} {Researchers}},
-  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S.},
-  howpublished={Under review at Science},
-  year={2023},
-  keywords={preprint},
+
+@article{sikdar2024what,
+  title={What we should learn from pandemic publishing},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie-Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S},
+  journal={Nature human behaviour},
+  pages={1--4},
+  year={2024},
+  selected={true}, 
   n_first_authors={2},
   award = {Contributed talks at IC2S2 2023, ICSSI 2023},
   slides = {newcomers-ic2s2.pdf},
+  url = {https://www.nature.com/articles/s41562-024-01969-7},
 }
+
 
