Nature HB bib update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -187,6 +187,22 @@ incollection{kogge2019b,
 }
 
 
+@article{sikdar2024what,
+  title={What we should learn from pandemic publishing},
+  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie-Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S},
+  journal={Nature Human Behaviour},
+  pages={1--4},
+  year={2024},
+  bibtex_show = {true},
+  abbr = {Nature HB},
+  selected={true}, 
+  n_first_authors={2},
+  award = {Contributed talks at IC2S2 2023, ICSSI 2023},
+  slides = {newcomers-ic2s2.pdf},
+  url = {https://www.nature.com/articles/s41562-024-01969-7},
+}
+
+
 @article{venturini2023collaboration,
   title={{Collaboration} and {Topic} {Switches} in {Science}},
   author={Sikdar, Satyaki and Venturini, Sara and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo},
@@ -205,18 +221,5 @@ incollection{kogge2019b,
   award = {Plenary talk at IC2S2 2023 [AR: 1.75%]<br>Contributed talks at NetSci 2023, ICSSI 2023},
 }
 
-
-@article{sikdar2024what,
-  title={What we should learn from pandemic publishing},
-  author={Sikdar, Satyaki and Venturini, Sara and Charpignon, Marie-Laure and Kumar, Sagar and Rinaldi, Francesco and Tudisco, Francesco and Fortunato, Santo and Majumder, Maimuna S},
-  journal={Nature human behaviour},
-  pages={1--4},
-  year={2024},
-  selected={true}, 
-  n_first_authors={2},
-  award = {Contributed talks at IC2S2 2023, ICSSI 2023},
-  slides = {newcomers-ic2s2.pdf},
-  url = {https://www.nature.com/articles/s41562-024-01969-7},
-}
 
 
