--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -200,6 +200,7 @@ incollection{kogge2019b,
   award = {Contributed talks at IC2S2 2023, ICSSI 2023},
   slides = {newcomers-ic2s2.pdf},
   url = {https://www.nature.com/articles/s41562-024-01969-7},
+  html = {https://www.nature.com/articles/s41562-024-01969-7},
 }
 
 
@@ -215,6 +216,7 @@ incollection{kogge2019b,
   n_first_authors={2},
   arxiv = {2304.06826},
   url = {https://www.nature.com/articles/s41598-024-51606-6},
+  html = {https://www.nature.com/articles/s41598-024-51606-6},
   code = {https://github.com/satyakisikdar/Collaboration-Topic-Switches},
   slides = {topic-slides.pdf},
   poster = {topic-poster.pdf},
